# TEQUEL

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WHITE_PAPER.md  tequel.h
benches/: tequel_bench.rs
docs/: TQL-11.md
docs/Core/: Encryption.md  Hashing.md  benchmarks.md
src/: avx2_inline.rs  lib.rs  main.rs
src/encrypt/: mod.rs
src/error/: mod.rs
src/hash/: mod.rs
src/rng/: mod.rs
tequel-core/: Cargo.toml  README.md
tequel-core/benches/: tequel_bench.rs
tequel-core/src/: entropy_test.rs  lib.rs
tequel-core/src/hash/: mod.rs
tequel-core/src/rng/: mod.rs
tequel-core/tests/: integration_test.rs
tests/: chaos_test.rs  integration_test.rs  kdf_test.rs
tests/internal_tests/: test_report.rs
